--- a/styles/components/dialog/addNftDialog.module.css
+++ b/styles/components/dialog/addNftDialog.module.css
@@ -79,3 +79,22 @@
   width: 100%;
   padding: 5px 0 25px 10px;
 }
+.upldMessage {
+  font-size: 14px;
+  position: absolute;
+  left: 50%;
+  bottom: 0px;
+  transform: translate(-50%, -50%);
+  /* border: 1px solid green; */
+  padding: 6px 15px;
+  border-radius: 4px;
+  background-color: #00800024;
+}
+.successMessage {
+  color: green;
+  background-color: #00800024;
+}
+.errorMessage {
+  color: rgb(235, 14, 14);
+  background-color: #80000024;
+}
