--- a/styles/components/dialog/crop.module.css
+++ b/styles/components/dialog/crop.module.css
@@ -33,3 +33,12 @@
   align-items: center;
   gap: 10px;
 }
+.sliderContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.sliderLabel {
+  font-size: 12px;
+}
