--- a/styles/pages/dashboard.module.css
+++ b/styles/pages/dashboard.module.css
@@ -1,18 +1,11 @@
 .container {
-  padding: 100px;
+  padding: 0 20px;
   height: 100%;
   width: 100%;
 }
-.innerContainer {
-  /* background-image: url("../../public/img/graph.gif"); */
-  height: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  /* margin: 10vh 0 0 20vw; */
-  width: 100%;
-  /* background-color: #e7ebf0; */
+.chartName {
   display: flex;
-  align-items: center;
+  padding: 15px 0 6px;
   justify-content: center;
+  margin: 15px 0 0px;
 }
