--- a/styles/pages/landing.module.css
+++ b/styles/pages/landing.module.css
@@ -3,6 +3,21 @@
   margin: 10vh 0 0 20vw;
   width: 80vw;
   background-color: rgb(238, 239, 245);
+  background: radial-gradient(
+      66.32% 66.32% at 54.13% 113.95%,
+      rgba(108, 38, 255, 0.2) 0,
+      rgba(242, 89, 255, 0) 100%
+    ),
+    linear-gradient(
+      211.99deg,
+      rgba(65, 157, 241, 0.2) -4.17%,
+      rgba(45, 143, 234, 0) 68.7%
+    ),
+    radial-gradient(
+      100% 100% at 28.65% 0,
+      #d5bdf5a3 0,
+      rgba(250, 247, 254, 0) 100%
+    );
 }
 .container h1 {
   color: rgb(206, 203, 220);
