--- a/styles/pages/dashboard.module.css
+++ b/styles/pages/dashboard.module.css
@@ -3,9 +3,57 @@
   height: 100%;
   width: 100%;
 }
+.chartContainer {
+  display: flex;
+  padding: 10px;
+  gap: 10px;
+  width: 100%;
+}
+.bettingChart {
+  /* flex: 1; */
+}
 .chartName {
   display: flex;
   padding: 15px 0 6px;
   justify-content: center;
   margin: 15px 0 0px;
+}
+.cardContainerGrid {
+  padding: 10px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+}
+.gridItem {
+}
+.card {
+  background-color: rgba(0, 132, 255, 0.188);
+  padding: 10px;
+  border-radius: 4px;
+  background: radial-gradient(
+      66.32% 66.32% at 54.13% 113.95%,
+      rgba(108, 38, 255, 0.2) 0,
+      rgba(242, 89, 255, 0) 100%
+    ),
+    linear-gradient(
+      211.99deg,
+      rgba(65, 157, 241, 0.2) -4.17%,
+      rgba(45, 143, 234, 0) 68.7%
+    ),
+    radial-gradient(
+      100% 100% at 28.65% 0,
+      #d5bdf5 0,
+      rgba(250, 247, 254, 0) 100%
+    );
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.cardHead {
+  font-weight: bold;
+  font-size: 14px;
+}
+.cardBody {
+  font-size: 14px;
 }
