--- a/styles/components/dialog/addArticleDialog.module.css
+++ b/styles/components/dialog/addArticleDialog.module.css
@@ -64,6 +64,20 @@
   margin-top: 10px;
   color: rgb(86, 84, 84);
 }
+.previewStep {
+  font-size: 14px;
+  margin-top: 10px;
+  color: rgb(86, 84, 84);
+}
+.previewLink {
+  font-size: 14px;
+  margin-top: 10px;
+  color: rgb(11, 120, 183);
+}
+.previewLinkText {
+  font-size: 14px;
+  margin-top: 10px;
+}
 .dialogAction {
   display: flex;
   justify-content: space-between;
